--- a/display/css/main.css
+++ b/display/css/main.css
@@ -278,10 +278,21 @@ body {
   justify-content: center;
 }
 
+#main {
+  transition: margin-left 0.5s;
+  padding: 0.5rem;
+}
+
 .era {
   margin-top: 1.3rem;
   font-size: 3rem;
   color: #FEFEFE;
+  margin-top: 3rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  z-index: 1;
+  width: 4rem;
+  height: 4rem;
 }
 @media screen and (min-width: 720px) {
   .era {
@@ -295,6 +306,200 @@ body {
     display: inline-block;
     font-size: 15rem;
     margin: 1rem;
+  }
+}
+
+#header {
+  text-align: center;
+  background-color: purple;
+  top: -30vh;
+  height: 30vh;
+  width: 100%;
+  position: fixed;
+  transition: 1s ease;
+  z-index: 2;
+}
+#header.active {
+  top: 0;
+}
+@media screen and (min-width: 1140px) {
+  #header {
+    height: 30vh;
+    top: -30vh;
+  }
+}
+#header .portrait {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  width: 5rem;
+  height: 5.5rem;
+  padding: 0.1rem;
+  border-radius: 80%;
+}
+@media screen and (min-width: 540px) {
+  #header .portrait {
+    max-width: 150px;
+    max-height: 150px;
+  }
+}
+@media screen and (min-width: 720px) {
+  #header .portrait {
+    max-width: 200px;
+    max-height: 200px;
+  }
+}
+@media screen and (min-width: 960px) {
+  #header .portrait {
+    max-width: 250px;
+    max-height: 250px;
+  }
+}
+@media screen and (min-width: 1140px) {
+  #header .portrait {
+    max-width: 300px;
+    max-height: 300px;
+  }
+}
+@media (orientation: landscape) {
+  #header .portrait {
+    max-width: 200px;
+    max-height: 200px;
+  }
+}
+
+.content {
+  padding: 0.4rem;
+}
+@media screen and (min-width: 720px) {
+  .content {
+    padding: 0.5rem;
+  }
+}
+@media (orientation: landscape) {
+  .content {
+    top: -4rem;
+    padding: 0rem;
+  }
+}
+
+.sideNav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  background-color: #363636;
+  overflow-x: hidden;
+  padding-top: 2rem;
+  transition: 0.5s;
+}
+.sideNav .sideNavClose {
+  position: absolute;
+  top: 0;
+  right: 2rem;
+  font-size: 2.5rem;
+  margin-left: 3rem;
+}
+.sideNav.active {
+  width: 42vw;
+}
+@media screen and (min-width: 720px) {
+  .sideNav.active {
+    width: 35vw;
+  }
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 3rem;
+  height: 1.5rem;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #777;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1rem;
+  width: 1rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
+}
+.slider-row {
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+input:checked + .slider + .graphic {
+  background: #f0932b;
+  background: linear-gradient(90deg, #f0932b 25%, #ffbe76 75%);
+  transition: 1s ease;
+}
+
+input:checked + .slider + .web {
+  background: #30336b;
+  background: linear-gradient(90deg, #30336b 25%, #686de0 75%);
+  transition: 1s ease;
+}
+
+input:checked + .slider + .game {
+  background: #badc58;
+  background: linear-gradient(90deg, #badc58 25%, #6ab04c 75%);
+  transition: 1s ease;
+}
+
+input:focus + .slider + .graphic {
+  box-shadow: 0 0 1px #f0932b;
+}
+
+input:focus + .slider + .web {
+  box-shadow: 0 0 1px #30336b;
+}
+
+input:focus + .slider + .game {
+  box-shadow: 0 0 1px #badc58;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.mobile {
+  margin: 1rem;
+  font-size: 2rem;
+  color: #FFF;
+}
+@media screen and (min-width: 960px) {
+  .mobile {
+    display: none;
   }
 }
 
@@ -319,6 +524,17 @@ button:hover, button:focus {
   color: white;
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.25em);
+}
+
+.btnCon {
+  display: none;
+}
+@media screen and (min-width: 960px) {
+  .btnCon {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+  }
 }
 
 .webBtn:hover {
@@ -407,80 +623,6 @@ button:hover, button:focus {
   }
 }
 
-#header {
-  text-align: center;
-  background-color: purple;
-  top: -30vh;
-  height: 30vh;
-  width: 100%;
-  position: fixed;
-  transition: 1s ease;
-  z-index: 2;
-}
-#header.active {
-  top: 0;
-}
-@media screen and (min-width: 1140px) {
-  #header {
-    height: 20vh;
-    top: -20vh;
-  }
-}
-#header .portrait {
-  display: flex;
-  justify-content: center;
-  margin-top: 3rem;
-  width: 5rem;
-  height: 5.5rem;
-  padding: 0.1rem;
-  border-radius: 80%;
-}
-@media screen and (min-width: 540px) {
-  #header .portrait {
-    width: 3rem;
-    height: 3.5rem;
-  }
-}
-@media screen and (min-width: 720px) {
-  #header .portrait {
-    width: 4.5rem;
-    height: 5rem;
-  }
-}
-@media screen and (min-width: 960px) {
-  #header .portrait {
-    width: 4rem;
-    height: 4.5rem;
-  }
-}
-@media screen and (min-width: 1140px) {
-  #header .portrait {
-    width: 3.5rem;
-    height: 4rem;
-  }
-}
-@media (orientation: landscape) {
-  #header .portrait {
-    margin-top: 0.5rem;
-    width: 3rem;
-    height: 3.5rem;
-  }
-}
-#header .content {
-  padding: 0.4rem;
-}
-@media screen and (min-width: 720px) {
-  #header .content {
-    padding: 0.5rem;
-  }
-}
-@media (orientation: landscape) {
-  #header .content {
-    top: -4rem;
-    padding: 0rem;
-  }
-}
-
 #exit {
   float: left;
   font-size: 2rem;
@@ -503,12 +645,6 @@ button:hover, button:focus {
 @media screen and (min-width: 720px) {
   #footer {
     overflow-y: auto;
-  }
-}
-@media screen and (min-width: 1140px) {
-  #footer {
-    height: 80vh;
-    bottom: -80vh;
   }
 }
 
@@ -546,12 +682,6 @@ button:hover, button:focus {
   .bioLrg p {
     font-size: 1rem;
   }
-}
-
-.era {
-  margin-top: 3rem;
-  width: 4rem;
-  height: 4rem;
 }
 
 /*# sourceMappingURL=main.css.map */
