--- a/app/scss/_viewPage.scss
+++ b/app/scss/_viewPage.scss
@@ -2,13 +2,15 @@ $viewBreakPoint1: 1200px;
 $viewBreakPoint2: 1000px;
 $viewBreakPoint3: 800px;
 
+$headerHeight: 300px;
+
 body.view {
 	background-color: #222;
 	color: white;
 }
 
 .header {
-	height: 30vh;
+	height: $headerHeight;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -38,7 +40,7 @@ body.view {
 		background-image: url('../images/lines.png');
 		background-size: 45vh 100%;
 		width: 100%;
-		height: 30vh;
+		height: $headerHeight;
 		top: 0;
 		right: 0;
 		bottom: 0;
@@ -50,7 +52,7 @@ body.view {
 }
 
 .section {
-	height: 70vh;
+	height: calc(100vh - $headerHeight);
 	#content {
 		width: 1000px;
 		@media (max-width: $viewBreakPoint1) {
