--- a/display/css/main.css
+++ b/display/css/main.css
@@ -287,7 +287,8 @@ body {
   margin-top: 1.3rem;
   font-size: 3rem;
   color: #FEFEFE;
-  margin-top: 3rem;
+  margin-top: 0.5rem;
+  margin-bottom: 3rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   z-index: 1;
@@ -331,6 +332,7 @@ body {
 #header .portrait {
   display: flex;
   justify-content: center;
+  position: absolute;
   margin-top: 3rem;
   width: 5rem;
   height: 5.5rem;
@@ -386,7 +388,7 @@ body {
 .sideNav {
   height: 100%;
   width: 0;
-  position: fixed;
+  position: absolute;
   z-index: 5;
   top: 0;
   left: 0;
@@ -398,16 +400,28 @@ body {
 .sideNav .sideNavClose {
   position: absolute;
   top: 0;
-  right: 2rem;
+  right: 2.5rem;
+  color: #FFF;
   font-size: 2.5rem;
   margin-left: 3rem;
 }
+.sideNav .navSwitch {
+  display: inline-block;
+  color: #FFF;
+  font-size: 1rem;
+  margin-left: 1rem;
+}
+@media screen and (min-width: 720px) {
+  .sideNav .navSwitch {
+    font-size: 2rem;
+  }
+}
 .sideNav.active {
-  width: 42vw;
+  width: 100vw;
 }
 @media screen and (min-width: 720px) {
   .sideNav.active {
-    width: 35vw;
+    width: 50vw;
   }
 }
 
@@ -451,42 +465,110 @@ body {
 .slider.round:before {
   border-radius: 50%;
 }
+.slider2 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #777;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider2:before {
+  position: absolute;
+  content: "";
+  height: 1rem;
+  width: 1rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider2.round {
+  border-radius: 34px;
+}
+.slider2.round:before {
+  border-radius: 50%;
+}
+.slider3 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #777;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider3:before {
+  position: absolute;
+  content: "";
+  height: 1rem;
+  width: 1rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider3.round {
+  border-radius: 34px;
+}
+.slider3.round:before {
+  border-radius: 50%;
+}
 .slider-row {
   margin-left: 1rem;
   margin-top: 1rem;
 }
 
-input:checked + .slider + .graphic {
+input:checked + .slider {
   background: #f0932b;
   background: linear-gradient(90deg, #f0932b 25%, #ffbe76 75%);
   transition: 1s ease;
 }
 
-input:checked + .slider + .web {
+input:checked + .slider2 {
   background: #30336b;
   background: linear-gradient(90deg, #30336b 25%, #686de0 75%);
   transition: 1s ease;
 }
 
-input:checked + .slider + .game {
+input:checked + .slider3 {
   background: #badc58;
   background: linear-gradient(90deg, #badc58 25%, #6ab04c 75%);
   transition: 1s ease;
 }
 
-input:focus + .slider + .graphic {
+input:focus + .slider {
   box-shadow: 0 0 1px #f0932b;
 }
 
-input:focus + .slider + .web {
+input:focus + .slider {
   box-shadow: 0 0 1px #30336b;
 }
 
-input:focus + .slider + .game {
+input:focus + .slider {
   box-shadow: 0 0 1px #badc58;
 }
 
 input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+input:checked + .slider2:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+input:checked + .slider3:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
@@ -567,9 +649,10 @@ button:hover, button:focus {
   border-radius: 5px;
   display: flex;
   flex: 1 1 auto;
-  max-height: 100%;
+  max-height: 200px;
   cursor: pointer;
   transition: 0.5s ease;
+  overflow: auto;
 }
 .card .border {
   position: absolute;
