--- a/display/scss/main.scss
+++ b/display/scss/main.scss
@@ -516,7 +516,10 @@ button {
 	}
 
 	&-content{
+		text-align: left;
+		align-content: center;
 		padding-top: 1rem;
+		padding-bottom: 0.5rem;
 		padding-right: 1rem;
 	}
 }
