--- a/display/css/main.css
+++ b/display/css/main.css
@@ -208,9 +208,8 @@ body {
   justify-content: center; }
 
 #main {
-  transition: margin-left 0.5s;
-  padding: 0.5rem;
-}
+  transition: margin-left .5s;
+  padding: 0.5rem; }
 
 .era {
   margin-top: 1.3rem;
@@ -222,22 +221,17 @@ body {
   margin-right: 0.5rem;
   z-index: 1;
   width: 4rem;
-  height: 4rem;
-}
-@media screen and (min-width: 720px) {
-  .era {
-    display: inline-block;
-    font-size: 9rem;
-    margin: 1rem;
-  }
-}
-@media screen and (min-width: 960px) {
-  .era {
-    display: inline-block;
-    font-size: 15rem;
-    margin: 1rem;
-  }
-}
+  height: 4rem; }
+  @media screen and (min-width: 720px) {
+    .era {
+      display: inline-block;
+      font-size: 9rem;
+      margin: 1rem; } }
+  @media screen and (min-width: 960px) {
+    .era {
+      display: inline-block;
+      font-size: 15rem;
+      margin: 1rem; } }
 
 #header {
   text-align: center;
@@ -247,72 +241,52 @@ body {
   width: 100%;
   position: fixed;
   transition: 1s ease;
-  z-index: 2;
-}
-#header.active {
-  top: 0;
-}
-@media screen and (min-width: 1140px) {
-  #header {
-    height: 30vh;
-    top: -30vh;
-  }
-}
-#header .portrait {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  margin-top: 3rem;
-  width: 5rem;
-  height: 5.5rem;
-  padding: 0.1rem;
-  border-radius: 80%;
-}
-@media screen and (min-width: 540px) {
+  z-index: 2; }
+  #header.active {
+    top: 0; }
+  @media screen and (min-width: 1140px) {
+    #header {
+      height: 30vh;
+      top: -30vh; } }
   #header .portrait {
-    max-width: 150px;
-    max-height: 150px;
-  }
-}
-@media screen and (min-width: 720px) {
-  #header .portrait {
-    max-width: 200px;
-    max-height: 200px;
-  }
-}
-@media screen and (min-width: 960px) {
-  #header .portrait {
-    max-width: 250px;
-    max-height: 250px;
-  }
-}
-@media screen and (min-width: 1140px) {
-  #header .portrait {
-    max-width: 300px;
-    max-height: 300px;
-  }
-}
-@media (orientation: landscape) {
-  #header .portrait {
-    max-width: 200px;
-    max-height: 200px;
-  }
-}
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    margin-top: 3rem;
+    width: 5rem;
+    height: 5.5rem;
+    padding: 0.1rem;
+    border-radius: 80%; }
+    @media screen and (min-width: 540px) {
+      #header .portrait {
+        max-width: 150px;
+        max-height: 150px; } }
+    @media screen and (min-width: 720px) {
+      #header .portrait {
+        max-width: 200px;
+        max-height: 200px; } }
+    @media screen and (min-width: 960px) {
+      #header .portrait {
+        max-width: 250px;
+        max-height: 250px; } }
+    @media screen and (min-width: 1140px) {
+      #header .portrait {
+        max-width: 300px;
+        max-height: 300px; } }
+    @media (orientation: landscape) {
+      #header .portrait {
+        max-width: 200px;
+        max-height: 200px; } }
 
 .content {
-  padding: 0.4rem;
-}
-@media screen and (min-width: 720px) {
-  .content {
-    padding: 0.5rem;
-  }
-}
-@media (orientation: landscape) {
-  .content {
-    top: -4rem;
-    padding: 0rem;
-  }
-}
+  padding: 0.4rem; }
+  @media screen and (min-width: 720px) {
+    .content {
+      padding: 0.5rem; } }
+  @media (orientation: landscape) {
+    .content {
+      top: -4rem;
+      padding: 0rem; } }
 
 .sideNav {
   height: 100%;
@@ -324,47 +298,37 @@ body {
   background-color: #363636;
   overflow-x: hidden;
   padding-top: 2rem;
-  transition: 0.5s;
-}
-.sideNav .sideNavClose {
-  position: absolute;
-  top: 0;
-  right: 2.5rem;
-  color: #FFF;
-  font-size: 2.5rem;
-  margin-left: 3rem;
-}
-.sideNav .navSwitch {
-  display: inline-block;
-  color: #FFF;
-  font-size: 1rem;
-  margin-left: 1rem;
-}
-@media screen and (min-width: 720px) {
+  transition: 0.5s; }
+  .sideNav .sideNavClose {
+    position: absolute;
+    top: 0;
+    right: 2.5rem;
+    color: #FFF;
+    font-size: 2.5rem;
+    margin-left: 3rem; }
   .sideNav .navSwitch {
-    font-size: 2rem;
-  }
-}
-.sideNav.active {
-  width: 100vw;
-}
-@media screen and (min-width: 720px) {
+    display: inline-block;
+    color: #FFF;
+    font-size: 1rem;
+    margin-left: 1rem; }
+    @media screen and (min-width: 720px) {
+      .sideNav .navSwitch {
+        font-size: 2rem; } }
   .sideNav.active {
-    width: 50vw;
-  }
-}
+    width: 100vw; }
+    @media screen and (min-width: 720px) {
+      .sideNav.active {
+        width: 50vw; } }
 
 .switch {
   position: relative;
   display: inline-block;
   width: 3rem;
-  height: 1.5rem;
-}
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
+  height: 1.5rem; }
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0; }
 
 .slider {
   position: absolute;
@@ -374,145 +338,120 @@ body {
   right: 0;
   bottom: 0;
   background-color: #777;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1rem;
-  width: 1rem;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider.round {
-  border-radius: 34px;
-}
-.slider.round:before {
-  border-radius: 50%;
-}
-.slider2 {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #777;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider2:before {
-  position: absolute;
-  content: "";
-  height: 1rem;
-  width: 1rem;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider2.round {
-  border-radius: 34px;
-}
-.slider2.round:before {
-  border-radius: 50%;
-}
-.slider3 {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #777;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider3:before {
-  position: absolute;
-  content: "";
-  height: 1rem;
-  width: 1rem;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider3.round {
-  border-radius: 34px;
-}
-.slider3.round:before {
-  border-radius: 50%;
-}
-.slider-row {
-  margin-left: 1rem;
-  margin-top: 1rem;
-}
+  -webkit-transition: .4s;
+  transition: .4s; }
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 1rem;
+    width: 1rem;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s; }
+  .slider.round {
+    border-radius: 34px; }
+  .slider.round:before {
+    border-radius: 50%; }
+  .slider2 {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #777;
+    -webkit-transition: .4s;
+    transition: .4s; }
+    .slider2:before {
+      position: absolute;
+      content: "";
+      height: 1rem;
+      width: 1rem;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s; }
+    .slider2.round {
+      border-radius: 34px; }
+    .slider2.round:before {
+      border-radius: 50%; }
+  .slider3 {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #777;
+    -webkit-transition: .4s;
+    transition: .4s; }
+    .slider3:before {
+      position: absolute;
+      content: "";
+      height: 1rem;
+      width: 1rem;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s; }
+    .slider3.round {
+      border-radius: 34px; }
+    .slider3.round:before {
+      border-radius: 50%; }
+  .slider-row {
+    margin-left: 1rem;
+    margin-top: 1rem; }
 
 input:checked + .slider {
   background: #f0932b;
   background: linear-gradient(90deg, #f0932b 25%, #ffbe76 75%);
-  transition: 1s ease;
-}
+  transition: 1s ease; }
 
 input:checked + .slider2 {
   background: #30336b;
   background: linear-gradient(90deg, #30336b 25%, #686de0 75%);
-  transition: 1s ease;
-}
+  transition: 1s ease; }
 
 input:checked + .slider3 {
   background: #badc58;
   background: linear-gradient(90deg, #badc58 25%, #6ab04c 75%);
-  transition: 1s ease;
-}
+  transition: 1s ease; }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #f0932b;
-}
+  box-shadow: 0 0 1px #f0932b; }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #30336b;
-}
+  box-shadow: 0 0 1px #30336b; }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #badc58;
-}
+  box-shadow: 0 0 1px #badc58; }
 
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+  transform: translateX(26px); }
 
 input:checked + .slider2:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+  transform: translateX(26px); }
 
 input:checked + .slider3:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+  transform: translateX(26px); }
 
 .mobile {
   margin: 1rem;
   font-size: 2rem;
-  color: #FFF;
-}
-@media screen and (min-width: 960px) {
-  .mobile {
-    display: none;
-  }
-}
+  color: #FFF; }
+  @media screen and (min-width: 960px) {
+    .mobile {
+      display: none; } }
 
 button {
   background-color: transparent;
@@ -525,44 +464,38 @@ button {
   text-transform: uppercase;
   font-weight: bold;
   transition: 1s ease;
-}
-button:hover, button:focus {
-  box-shadow: inset 0 0 0 2em;
-}
+  cursor: pointer; }
+  button:hover, button:focus {
+    box-shadow: inset 0 0 0 2em; }
 
 .btn:hover,
 .btn:focus {
   color: white;
   box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
   transform: translateY(-0.25em); }
+
 .btnCon {
-  display: none;
-}
-@media screen and (min-width: 960px) {
-  .btnCon {
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
-  }
-}
+  display: none; }
+  @media screen and (min-width: 960px) {
+    .btnCon {
+      display: flex;
+      justify-content: center;
+      margin-top: 1rem; } }
 
 .webBtn:hover {
   background: #30336b;
   background: linear-gradient(90deg, #30336b 25%, #686de0 75%);
-  transition: 1s ease;
-}
+  transition: 1s ease; }
 
 .graphicBtn:hover {
   background: #f0932b;
   background: linear-gradient(90deg, #f0932b 25%, #ffbe76 75%);
-  transition: 1s ease;
-}
+  transition: 1s ease; }
 
 .gameBtn:hover {
   background: #badc58;
   background: linear-gradient(90deg, #badc58 25%, #6ab04c 75%);
-  transition: 1s ease;
-}
+  transition: 1s ease; }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -579,45 +512,37 @@ button:hover, button:focus {
   max-height: 200px;
   cursor: pointer;
   transition: 0.5s ease;
-  overflow: auto;
-}
-.card .border {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: 0.5s;
-  border-radius: 5px;
-  top: 0;
-  left: 0;
-  border: 1px solid transparent;
-  pointer-events: none;
-}
-.card:hover {
-  transform: translateY(-0.25em);
-}
-.card:hover .border.web {
-  border: 3px solid #4834d4;
-}
-.card:hover .border.graphic {
-  border: 3px solid #f0932b;
-}
-.card:hover .border.gameArt {
-  border: 3px solid #6ab04c;
-}
-.card-img {
-  height: 7.7rem;
-  width: 100%;
-  padding: 0.4rem;
-  border-radius: 100%;
-  overflow-x: none;
-}
-.card-content {
-  text-align: left;
-  align-content: center;
-  padding-top: 1rem;
-  padding-bottom: 0.5rem;
-  padding-right: 1rem;
-}
+  overflow: auto; }
+  .card .border {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    border-radius: 5px;
+    top: 0;
+    left: 0;
+    border: 1px solid transparent;
+    pointer-events: none; }
+  .card:hover {
+    transform: translateY(-0.25em); }
+    .card:hover .border.web {
+      border: 3px solid #4834d4; }
+    .card:hover .border.graphic {
+      border: 3px solid #f0932b; }
+    .card:hover .border.gameArt {
+      border: 3px solid #6ab04c; }
+  .card-img {
+    height: 7.7rem;
+    width: 100%;
+    padding: 0.4rem;
+    border-radius: 100%;
+    overflow-x: none; }
+  .card-content {
+    text-align: left;
+    align-content: center;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+    padding-right: 1rem; }
 
 .cardHolder {
   display: flex;
@@ -630,6 +555,7 @@ button:hover, button:focus {
       display: flex;
       justify-content: space-around;
       margin: 4.5rem; } }
+
 #exit {
   float: left;
   font-size: 2rem;
@@ -643,16 +569,12 @@ button:hover, button:focus {
   bottom: -70vh;
   transition: 1s ease;
   z-index: 2;
-  background-color: blue;
-}
-#footer.active {
-  bottom: 0;
-}
-@media screen and (min-width: 720px) {
-  #footer {
-    overflow-y: auto;
-  }
-}
+  background-color: blue; }
+  #footer.active {
+    bottom: 0; }
+  @media screen and (min-width: 720px) {
+    #footer {
+      overflow-y: auto; } }
 
 .portraitLrg {
   display: flex;
@@ -679,4 +601,5 @@ button:hover, button:focus {
         font-size: 1.5rem; }
       .bioLrg p {
         font-size: 1rem; } }
+
 /*# sourceMappingURL=main.css.map */
