--- a/app/css/main.css
+++ b/app/css/main.css
@@ -176,6 +176,19 @@ body.view {
   justify-content: center;
   align-items: center;
   position: relative; }
+  .header:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    opacity: 0.05;
+    background-image: url("../images/lines.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
   .header .profile {
     text-align: center; }
     .header .profile img {
@@ -191,23 +204,10 @@ body.view {
     .header .profile h2 {
       margin-bottom: 4px; }
     .header .profile p {
-      color: rgba(0, 0, 255, 0.5); }
-  .header::after {
-    content: "";
-    background-image: url("../images/lines.png");
-    background-size: 45vh 100%;
-    width: 100%;
-    height: 300px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    z-index: -1;
-    opacity: 0.3; }
+      color: rgba(255, 255, 255, 0.5); }
 
 .section {
-  height: calc(100vh - $headerHeight); }
+  height: calc(100vh - 300px); }
   .section #content {
     width: 1000px;
     padding-top: 48px;
