--- a/app/scss/_viewPage.scss
+++ b/app/scss/_viewPage.scss
@@ -15,6 +15,20 @@ body.view {
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	&:after {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		opacity: 0.05;
+		background-image: url('../images/lines.gif');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
 	.profile {
 		text-align: center;
 		img {
@@ -32,27 +46,13 @@ body.view {
 			margin-bottom: 4px;
 		}
 		p {
-			color: rgba(blue, 0.5);
+			color: rgba(white, 0.5);
 		}
-	}
-	&::after {
-		content: "";
-		background-image: url('../images/lines.png');
-		background-size: 45vh 100%;
-		width: 100%;
-		height: $headerHeight;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		position: absolute;
-		z-index: -1;
-		opacity: 0.3;
 	}
 }
 
 .section {
-	height: calc(100vh - $headerHeight);
+	height: calc(100vh - #{$headerHeight});
 	#content {
 		width: 1000px;
 		@media (max-width: $viewBreakPoint1) {
