--- a/app/css/main.css
+++ b/app/css/main.css
@@ -119,11 +119,12 @@
 
 .actions .card {
   text-align: center; }
-  .actions .card .buttons {
-    margin-bottom: 24px; }
-    .actions .card .buttons * {
-      display: inline-block;
-      margin: 4px 0; }
+  @media (max-width: 1610px) {
+    .actions .card .buttons {
+      margin-bottom: 24px; } }
+  .actions .card .buttons * {
+    display: inline-block;
+    margin: 4px 0; }
 .actions .accountButton {
   text-decoration: none;
   padding: 8px 24px;
@@ -155,13 +156,8 @@
       width: 100%; } }
   .content > div {
     margin-top: 24px; }
-
-.accountBox {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .accountBox .information {
-    text-align: center; }
+  .content .feedback h2 {
+    margin-bottom: 12px; }
 
 div[data-tune="withBorder"], div[data-tune="withBackground"] {
   display: none; }
@@ -171,11 +167,12 @@ body.view {
   color: white; }
 
 .header {
-  height: 300px;
+  height: 230px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative; }
+  position: fixed;
+  width: 100%; }
   .header:after {
     content: "";
     position: absolute;
@@ -207,7 +204,12 @@ body.view {
       color: rgba(255, 255, 255, 0.5); }
 
 .section {
-  height: calc(100vh - 300px); }
+  position: fixed;
+  top: 230px;
+  height: calc(100vh - 230px);
+  overflow-y: scroll;
+  width: 100%;
+  padding-bottom: 48px; }
   .section #content {
     width: 1000px;
     padding-top: 48px;
@@ -239,17 +241,26 @@ body.view {
       .section #content .block iframe {
         width: 100%; }
 
-body.inactive {
+body {
   overflow: hidden; }
   body.inactive #dialog {
     display: block !important; }
+  body.addStudent #dialogNew {
+    display: block !important; }
 
 .admin {
+  z-index: 10;
+  width: 60%;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 20px 0; }
-  .admin a {
+  padding: 20px 0;
+  position: relative; }
+  @media (max-width: 700px) {
+    .admin {
+      width: 90%; } }
+  .admin a, .admin button {
     padding: 4px 12px;
     border-radius: 4px;
     font-size: 1em;
@@ -260,18 +271,22 @@ body.inactive {
     border: none;
     color: white;
     background-color: #6BC781; }
-    .admin a:hover {
+    .admin a:hover, .admin button:hover {
       box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
       background-color: #46b962; }
+  .admin h2 {
+    width: 100%;
+    text-align: center; }
 
-#dialog {
+.dialog {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  display: none; }
-  #dialog .dialogContainer {
+  display: none;
+  z-index: 50; }
+  .dialog .dialogContainer {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -279,11 +294,13 @@ body.inactive {
     background-color: white;
     padding: 24px;
     border-radius: 24px; }
-    #dialog .dialogContainer .dialogButtons {
+    .dialog .dialogContainer > h3 {
+      margin-bottom: 8px; }
+    .dialog .dialogContainer .dialogButtons {
       display: flex;
       justify-content: space-around;
       margin-top: 12px; }
-      #dialog .dialogContainer .dialogButtons button {
+      .dialog .dialogContainer .dialogButtons button {
         padding: 8px 24px;
         border-radius: 8px;
         font-size: 0.8em;
@@ -293,17 +310,31 @@ body.inactive {
         transition: box-shadow 0.3s, background-color 0.3s;
         border: none;
         color: white; }
-        #dialog .dialogContainer .dialogButtons button:hover {
+        .dialog .dialogContainer .dialogButtons button:hover {
           box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
-        #dialog .dialogContainer .dialogButtons button#accept {
+        .dialog .dialogContainer .dialogButtons button.accept {
           background-color: #6BC781; }
-          #dialog .dialogContainer .dialogButtons button#accept:hover {
+          .dialog .dialogContainer .dialogButtons button.accept:hover {
             background-color: #46b962; }
-        #dialog .dialogContainer .dialogButtons button#cancel {
+        .dialog .dialogContainer .dialogButtons button.cancel {
           background-color: #EA7B7B; }
-          #dialog .dialogContainer .dialogButtons button#cancel:hover {
+          .dialog .dialogContainer .dialogButtons button.cancel:hover {
             background-color: #e34f4f; }
-  #dialog .dialogBackground {
+  .dialog .caption {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 0.8em;
+    margin: -8px 0 12px 0; }
+  .dialog #radioField {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .dialog #radioField .radioButton {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .dialog #radioField .radioButton input {
+        margin-bottom: 4px; }
+  .dialog .dialogBackground {
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.4); }
@@ -342,6 +373,8 @@ body.inactive {
         display: flex;
         flex-direction: column;
         justify-content: center; }
+        .memberContainer .memberCard .top .text .name {
+          font-size: 1.3em; }
       .memberContainer .memberCard .top .buttons {
         display: flex;
         flex-direction: column;
