--- a/app/scss/_loginPage.scss
+++ b/app/scss/_loginPage.scss
@@ -7,6 +7,9 @@ $transition: 0.15s;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+	h2 {
+		margin-bottom: 8px;
+	}
 }
 
 .inputField {
