Added profile uploading for students

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -249,6 +249,8 @@ body {
     display: block !important; }
   body.addStudent #dialogNew {
     display: block !important; }
+  body.addProfileImage #uplaodImageDialog {
+    display: block !important; }
 
 .admin {
   z-index: 10;
