can now upload multiple users at once using a csv

--- a/app/scss/_memberPage.scss
+++ b/app/scss/_memberPage.scss
@@ -10,6 +10,11 @@ body {
 			display: block !important;
 		}
 	}
+	&.addMultiple {
+		#dialogMultiple {
+			display: block !important;
+		}
+	}
 }
 
 .admin {
