--- a/app/css/main.css
+++ b/app/css/main.css
@@ -44,7 +44,7 @@
       font-size: 0.7em;
       padding: 0 4px; }
     .inputField input::placeholder {
-      color: rgba(0, 0, 0, 0); }
+      color: transparent; }
   .inputField .inputBorder {
     position: absolute;
     top: 0;
@@ -248,6 +248,8 @@ body {
   body.inactive #dialog {
     display: block !important; }
   body.addStudent #dialogNew {
+    display: block !important; }
+  body.addMultiple #dialogMultiple {
     display: block !important; }
 
 .admin {
